@@ -1,5 +1,7 @@
 Upcoming:
 - Small fix for mojang mappings
+- The space chamber has been ported
+- The Builder chunkloads again
 
 1.16-3.0.17:
 - The Builder and Shield will now (if possible) use a fake player with the same UUID as the player that placed the builder
